# virthttp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  Stacktrace.txt  _admin_connection_8hpp.html  _admin_connection_8hpp_source.html  _base_8hpp.html  _base_8hpp_source.html  _block_commit_flag_8hpp.html  _block_commit_flag_8hpp_source.html  _block_copy_flag_8hpp.html  _block_copy_flag_8hpp_source.html  _block_job_abort_flag_8hpp.html  _block_job_abort_flag_8hpp_source.html  _block_job_info_flag_8hpp.html  _block_job_info_flag_8hpp_source.html  _block_job_set_speed_flag_8hpp.html  _block_job_set_speed_flag_8hpp_source.html  _block_pull_flag_8hpp.html  _block_pull_flag_8hpp_source.html  _block_rebase_flag_8hpp.html  _block_rebase_flag_8hpp_source.html  _block_resize_flag_8hpp.html  _block_resize_flag_8hpp_source.html  _channel_flag_8hpp.html  _channel_flag_8hpp_source.html  _connection_2_decls_8hpp.html  _connection_2_decls_8hpp_source.html  _connection_8hpp.html  _connection_8hpp_source.html  _console_flag_8hpp.html  _console_flag_8hpp_source.html  _cpu_map_8hpp.html  (+644 more)
CMake/Modules/: FindLibDeflate.cmake  FindLibVirt.cmake  LibFindMacros.cmake  WA-ICEs.cmake
docs/: API-documentation.md  ERRORS.md  Errors.md  Flags.md  Home.md
include/: LIFOFIFO.h  ResourcesInterface.hpp  cexpr_algs.hpp  detect.hpp  flatmap.hpp  fwd.hpp  json_utils.hpp  logger.hpp  urlparser.hpp  utils.hpp  virt_wrap.hpp
include/virt_wrap/: AdminConnection.hpp  Connection.hpp  CpuMap.hpp  Domain.hpp  Error.hpp  GFlags.hpp  Network.hpp  NodeDevice.hpp  StoragePool.hpp  StorageVol.hpp  Stream.hpp  TypesParam.hpp  decls.hpp  fwd.hpp  tfe.hpp  type_ops.hpp  utility.hpp
include/virt_wrap/enums/: Base.hpp  GFlags.hpp
include/virt_wrap/enums/Connection/: Connection.hpp  Decls.hpp  ListDomainFlag.hpp  ListStoragePoolsFlag.hpp
include/virt_wrap/enums/Domain/: BlockCommitFlag.hpp  BlockCopyFlag.hpp  BlockJobAbortFlag.hpp  BlockJobInfoFlag.hpp  BlockJobSetSpeedFlag.hpp  BlockPullFlag.hpp  BlockRebaseFlag.hpp  BlockResizeFlag.hpp  ChannelFlag.hpp  ConsoleFlag.hpp  CreateFlag.hpp  Decls.hpp  DestroyFlag.hpp  DeviceModifyFlag.hpp  Domain.hpp  GetJobStatsFlag.hpp  KeycodeSet.hpp  Lifecycle.hpp  LifecycleAction.hpp  MITPFlag.hpp  MemoryModFlag.hpp  MetadataType.hpp  MigrateFlag.hpp  ModificationImpactFlag.hpp  OpenGraphicsFlag.hpp  ProcessSignal.hpp  SaveRestoreFlag.hpp  ShutdownFlag.hpp  State.hpp  UndefineFlag.hpp  VCpuFlag.hpp  XMLFlags.hpp  XmlFlag.hpp
include/virt_wrap/enums/Network/: XMLFlags.hpp
include/virt_wrap/enums/Storage/: PoolBuildFlag.hpp  PoolCreateFlag.hpp  PoolDeleteFlag.hpp  PoolState.hpp  StoragePool.hpp  StorageVol.hpp  VolCreateFlag.hpp  VolDeleteFlag.hpp  VolDownloadFlag.hpp  VolInfoFlag.hpp  VolResizeFlag.hpp  VolType.hpp  VolUploadFlag.hpp  VolWipeAlgorithm.hpp
include/virt_wrap/enums/Stream/: Flag.hpp  RecvFlag.hpp  Stream.hpp
include/virt_wrap/impl/: Connection.hpp  Domain.hpp  Network.hpp  NodeDevice.hpp  StoragePool.hpp  StorageVol.hpp  Stream.hpp  TypedParams.hpp
include/virtxml/: capabilities.hpp  generic.hpp  virtxml.hpp  xmlspan.hpp  xmlstr.hpp  xmlval.hpp
include/wrapper/: actions_table.hpp  config.hpp  depends.hpp  dispatch.hpp  domain_actions_table.hpp  error_msg.hpp  general_store.hpp  handler.hpp  http_wrapper.hpp  json2virt.hpp  network_actions_table.hpp  solver.hpp  virt2json.hpp
include/wrapper/decoder_support/: compression.hpp  libdeflate.hpp  zlib_beast.hpp  zlib_beast_detail.hpp  zlib_beast_impl.hpp
include/wrapper/handlers/: base.hpp  domain.hpp  flagwork.hpp  hdl_ctx.hpp  network.hpp  proto.hpp
include/wrapper/handlers/async/: async_handler.hpp  async_store.hpp
include/wrapper/impl/: config.hpp
include/wrapper/protocol_support/: beast_internals.hpp  protocols.hpp  request_handler.hpp  tcp_listener.hpp
include/wrapper/protocol_support/http1/: Session.hpp
medias/images/: virthttp-logo.xcf
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+149 more)
src/wrapper/: depends.cpp  json2virt.cpp
tests/: clean_tests.sh  domain-x86_64-host.xml  network.xml  setup_tests.sh  tests-domain-get.py  tests-domain.py
tools/virtenums-ag/: CMakeLists.txt
tools/virtenums-ag/src/: main.cpp
